# lecture-notes

./: .buildinfo  pyproject.toml
_sources/: markdown-notebooks.ipynb
