[tool.poetry]
name = "lecture-notes"
version = "0.1.0"
description = ""
authors = ["jgamper <jevgenij.gamper5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter-book = "^0.13.0"
ghp-import = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
